# FeathersUp.ai

./: .gitignore  LICENSE  README.md
ingestion-service/: README.md  env.example  gateway.py  ingestion.py  main.py  pyproject.toml  start.sh
semantic-retrieval-service/: README.md  docker-compose.yml  env.example  main.py  pyproject.toml  test_imports.py
semantic-retrieval-service/src/: __init__.py
semantic-retrieval-service/src/api/routes/: embedding.py
semantic-retrieval-service/src/config/: settings.py
ticketing-system/: .dockerignore  DEVELOPMENT.md  EMBEDDING_INTEGRATION.md  README.md  docker-compose.yml  package-lock.json  package.json  servers.json  start.sh
ticketing-system/backend/: .sequelizerc  CATEGORY_SEEDING.md  Dockerfile  init.sql  init.sql.bak  package-lock.json  package.json  seed-categories.js  setup.sh  test-embedding.js
ticketing-system/backend/migrations/: 001-create-tables.js  002-agent-categories.js  003-add-embedding-column.js
ticketing-system/backend/src/: server.js
ticketing-system/backend/src/config/: database.js  (+1 more)
ticketing-system/frontend/: README.md  env.example  package-lock.json  package.json  start.sh  tailwind.config.js
ticketing-system/frontend/public/: index.html  manifest.json
ticketing-system/frontend/src/: App.tsx  index.css
user-input-vector-embedding-generation/: Dockerfile  docker-compose.prod.yml  requirements.txt
user-input-vector-embedding-generation/src/api/: app.py
user-input-vector-embedding-generation/src/config/: settings.py
user-input-vector-embedding-generation/src/models/: embedding.py
(+58 files in other folders)
